--- a/package.json
+++ b/package.json
@@ -26,10 +26,18 @@
     ]
   },
   "dependencies": {
+    "apexcharts": "^3.27.3",
+    "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
+    "date-fns-tz": "^1.1.6",
     "next": "11.1.0",
     "next-pwa": "^5.3.1",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-query": "^3.19.6",
+    "recharts": "^2.1.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -44,6 +52,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.18",
+    "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
